# hot-cues-automation

./: .gitignore  README.md  hot_cues_automation.py  pyproject.toml  requirements.txt  run.txt
tests/: __init__.py  test_hot_cues_automation.py
