[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hot-cues-automation"
version = "0.1.0"
description = "Add Serato-compatible hot cues to drum-and-bass MP3 files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.10.0",
    "mutagen>=1.47.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.scripts]
hot-cues = "hot_cues_automation:main"

[tool.setuptools]
py-modules = ["hot_cues_automation"]
